게시판 읽기 기능 / 상위폴더 생성 오류 수정

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
   
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>CmWorld</title>
+  <title>notice_board</title>
 </head>
 
 <body>
